# slate

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  store.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Canvas.tsx  ChatOverlay.tsx  MusicTile.tsx  OverlaysModal.tsx  PlaybackModal.tsx  SettingsModal.tsx  Sidebar.tsx  SourcesPanel.tsx  SplashScreen.tsx  StreamingModal.tsx  TermsModal.tsx  TextTile.tsx  Titlebar.tsx  Tooltip.tsx  VideoTile.tsx
src/config/: platforms.ts
src/contexts/: TooltipContext.tsx
src/hooks/: useAlerts.ts  useAudioCapture.ts  useCameraDevices.ts  useChat.ts  useRecorder.ts  useStreamer.ts
src/lib/: audioRegistry.ts  browserFrameRegistry.ts  builtInAssets.ts  crashReporter.ts  drawAlert.ts  layoutShare.ts  overlayTemplates.ts  streamRegistry.ts  videoRegistry.ts
